<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/nav_home" />
        <!--<item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/nav_group" />-->

        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/nav_sub_feedback_header">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/paper_plane"
                    android:title="@string/nav_sub_feedback_help" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/about"
                    android:title="@string/nav_sub_feedback_about" />
            </menu>
        </item>







    </group>
</menu>